--- a/css/overlay.css
+++ b/css/overlay.css
@@ -2601,7 +2601,7 @@ button._77qZLron1HY93yUW4_C4m.DialogButton {
   width: auto !important;
   max-width: 100% !important;
   margin: 0 !important;
-  margin-top: calc(var(--zehn-size-titlebar-height) + var(--zehn-size-padding-medium)) !important;
+  margin-top: var(--zehn-size-titlebar-height) !important;
 }
 
 ._2ywySGDASDCC43aPuicxHt.DialogContent._DialogLayout._3mgb-3_dHk3POEOVOh0Dvp.Panel {
@@ -5155,7 +5155,7 @@ svg._1jEeo7zqm7N8CC0LXx29Py {
   min-width: var(--zehn-size-pagelist-width-min) !important;
   max-width: var(--zehn-size-pagelist-width) !important;
   line-height: var(--zehn-size-pagelist-height) !important;
-  padding: 64px 0 0 0 !important;
+  padding: var(--zehn-size-titlebar-height) 0 0 0 !important;
   background: var(--zehn-color-section-acrylic) !important;
   transition: background-color 0.2s ease-in-out, backdrop-filter 0.2s ease !important;
   /* backdrop-filter: blur(var(--zehn-size-blur-acrylic)) !important; */
