--- a/css/settings.css
+++ b/css/settings.css
@@ -26,24 +26,6 @@
   min-width: 0 !important;
 }
 
-.ModalOverlayContent.active .DialogContent._DialogLayout:not(.CFTLX2wIKOK3hNV-fS7_V) {
-  border: var(--zehn-size-border) solid var(--zehn-color-border) !important;
-  background: var(--zehn-color-base) !important;
-}
-
-.WindowFocus .ModalOverlayContent.active .DialogContent._DialogLayout:not(.CFTLX2wIKOK3hNV-fS7_V) {
-  border: var(--zehn-size-border) solid var(--zehn-color-border-focus) !important;
-}
-
-.ModalOverlayContent.active .DialogContent._DialogLayout:not(.CFTLX2wIKOK3hNV-fS7_V):not(.GenericConfirmDialog) {}
-
-.ModalDialogPopup .ModalDialogBody:not(._1UJDmU3N-pkv7oTJ_Zf9nK):not(.l25AfossKXBOZGYoty0tM) .title-area,
-.ModalDialogPopup .ModalDialogBody._1UJDmU3N-pkv7oTJ_Zf9nK .GameNotes .title-area {
-  right: 0 !important;
-  top: 0 !important;
-  left: 0 !important;
-}
-
 ._1itstBRykbCEZZrECYg_YU ._1UJDmU3N-pkv7oTJ_Zf9nK {
   min-height: 100% !important;
   min-width: 100% !important;
@@ -86,26 +68,6 @@
 .ModalDialogPopup .ModalDialogBody.DesktopUI .PopupFullWindow .TitleBar._3gGR9H910U7tiqa3tPCQa8 {
   width: calc(100% - (var(--zehn-size-border) * 2)) !important;
   box-sizing: border-box !important;
-}
-
-/* TOPBAR */
-.ModalPosition_TopBar {
-  min-height: 0 !important;
-  display: none !important;
-  background: transparent !important;
-}
-
-.DialogContent,
-.DialogContentTransition {
-  background: transparent !important;
-}
-
-@media (prefers-contrast: more) {
-
-  .DialogContent,
-  .DialogContentTransition {
-    background: transparent !important;
-  }
 }
 
 /* TEXT */
